--- a/src/CreateEntry.css
+++ b/src/CreateEntry.css
@@ -27,6 +27,7 @@ margin: 0 auto;
   border-radius: 10px;
   background-color: #4363ee;
   opacity: .9;
+  margin-bottom: 150px;
   
 }
 
